-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: core-svc
-
b156
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8174286 | 10 | Mandy Chung | P3 | Resolved | Fixed | b01 |
java.management is the module for JMX and JMX remote API and java.lang.management. It also includes the JDK management agent providing the JDK-specific out-of-the-box monitoring and management support.
With a recent re-examination, it is more appropriate for JDK management agent to live in its own module. It is proposed to put it in a module named `jdk.management.agent`.
With a recent re-examination, it is more appropriate for JDK management agent to live in its own module. It is proposed to put it in a module named `jdk.management.agent`.
- backported by
-
JDK-8174286 Separate JDK management agent from java.management module
-
- Resolved
-
- relates to
-
JDK-8173607 JMX RMI connector should be in its own module
-
- Resolved
-
-
JDK-8173976 Test sun/management/jdp/JdpJmxRemoteDynamicPortTest.java fails compilation
-
- Closed
-