8173608: Separate JDK management agent from java.management module

Reviewed-by: dfuchs, dholmes, erikj